RLS: Enable composited scrolling in composited iframes.

This fixes 16 of the 21 compositing/ layout tests listed on crbug.com/778469.
The remaining 5 are affected by crbug.com/784053.

This patch includes new baselines for the tests that are fixed (diff against
generic baselines in patchset 1).  These reflect the presence of scrolling
layers in the layer tree dump, and "flattenInheritedTransform": false due to
crbug.com/778060.

Bug: 778469
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I1cffa503561942aef7c932f6d52ae541dc88e8a2
Reviewed-on: https://chromium-review.googlesource.com/764952
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515995}
Former-commit-id: 157d2b153e3992fac6dcc5c1eaba428a6d823814